[package]
name = "unic-datetime"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"
exclude = ["data/*"]

[dependencies]
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
binary = ["serde", "serde_json"]
no-static = []

[[bin]]
name = "generate_tables"
required-features = ["binary"]

[[bench]]
name = "dates"
harness = false

[[example]]
name = "dynamic"
required-features = ["binary"]
